DuPont DevSB/src/objects/DPS_BI_Integration_Error_Handling__c.object
<CustomObject>
    <description>Handling Exception related to CPSF/CIC.</description>
    <fields>
        <fullName>CP_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP Project</label>
        <referenceTo>ConstructionPts__CP_Project__c</referenceTo>
        <relationshipName>DPS_Exception_Handlings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dodge_Roles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dodge Roles</label>
        <referenceTo>ConstructionPts__CP_Roles__c</referenceTo>
        <relationshipName>DPS_Exception_Handlings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIC</fullName>
                </value>
                <value>
                    <fullName>CPSF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DPS-BI Integration Error Handling</label>
    <listViews>
        <fullName>CIC_DPS_Error_Handling</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>equals</operation>
            <value>CIC</value>
        </filters>
        <label>CIC-DPS-Error-Handling</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CIC_DPS_Error_Handling_Tody</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>equals</operation>
            <value>CIC</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>CIC-DPS-Error-Handling Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPSF_DPS_Error_Handling</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>CP_Project__c</columns>
        <columns>Dodge_Roles__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>equals</operation>
            <value>CPSF</value>
        </filters>
        <label>CPSF-DPS-Error-Handling</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EH-{YY}-{MM}-{000000}</displayFormat>
        <label>DPS-BI Integration Error Handling</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DPS-BI Integration Error Handling</pluralLabel>
    <recordTypes>
        <fullName>DPS_Exception_Handling</fullName>
        <active>true</active>
        <label>DPS Exception Handling</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>